[gd_scene load_steps=6 format=2]

[ext_resource path="res://Balls/Sprites/SmallBalls-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Balls/BallBase.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[node name="SmallBall" type="RigidBody2D"]
collision_layer = 9
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
can_sleep = false
linear_velocity = Vector2( 50, -50 )
linear_damp = 0.5
script = ExtResource( 2 )
graphic_pixel_size = 32
speed_min = 30.0
speed_max = 150.0
point_value = 100
pop_cloud_size = Vector2( 1.3, 1.3 )
pop_cloud_duration = 20.0
pop_cloud_speed = 1.2
pop_bang_size = Vector2( 2, 2 )

[node name="CShape" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )

[node name="BulletZone" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletZone"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )

[node name="TestBall" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 4
frame = 1

[connection signal="body_entered" from="." to="." method="_on_TestBall_body_entered"]
[connection signal="area_entered" from="BulletZone" to="." method="_on_BulletZone_area_entered"]
